--- a/BriefingMetadataService/src/DACM.BriefingMetadataService/DACM.BriefingMetadataService.csproj
+++ b/BriefingMetadataService/src/DACM.BriefingMetadataService/DACM.BriefingMetadataService.csproj
@@ -7,6 +7,7 @@
     <PreserveCompilationContext>true</PreserveCompilationContext>
     <AssemblyName>DACM.BriefingMetadataService</AssemblyName>
     <PackageId>DACM.BriefingMetadataService</PackageId>
+    <IsTransformWebConfigDisabled>true</IsTransformWebConfigDisabled>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
