--- a/BriefingMetadataService/src/DACM.BriefingMetadataService/Dockerfile
+++ b/BriefingMetadataService/src/DACM.BriefingMetadataService/Dockerfile
@@ -1,19 +1,22 @@
-FROM mcr.microsoft.com/dotnet/core/sdk:8.0 AS build-env
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build-env
 WORKDIR /app
 
 ENV DOTNET_CLI_TELEMETRY_OPTOUT 1
+ENV PROJECT_DIR="BriefingMetadataService/src/DACM.BriefingMetadataService"
 
 # copy csproj and restore as distinct layers
-COPY *.csproj ./
+COPY "$PROJECT_DIR/*.csproj" ./
 RUN dotnet restore
 
 # copy everything else and build
-COPY . ./
+COPY "$PROJECT_DIR" ./
 RUN dotnet publish -c Release -o out
 
 # build runtime image
-FROM mcr.microsoft.com/dotnet/core/aspnet:8.0
+FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /app
 COPY --from=build-env /app/out .
+ADD resources/Metadata/BriefingMetadata.json /app/resources/Metadata/BriefingMetadata.json
+EXPOSE 5000
 
 ENTRYPOINT ["dotnet", "DACM.BriefingMetadataService.dll"]
