--- a/BriefingMetadataService/src/DACM.BriefingMetadataService/Dockerfile
+++ b/BriefingMetadataService/src/DACM.BriefingMetadataService/Dockerfile
@@ -17,6 +17,8 @@ FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /app
 COPY --from=build-env /app/out .
 ADD resources/Metadata/BriefingMetadata.json /app/resources/Metadata/BriefingMetadata.json
+
+ENV ASPNETCORE_URLS http://*:5000
 EXPOSE 5000
 
 ENTRYPOINT ["dotnet", "DACM.BriefingMetadataService.dll"]
