Build AssetMetadataService as a docker image

--- a/AssetMetadataService/src/DACM.AssetMetadataService/Dockerfile
+++ b/AssetMetadataService/src/DACM.AssetMetadataService/Dockerfile
@@ -1,19 +1,24 @@
-FROM mcr.microsoft.com/dotnet/core/sdk:8.0 AS build-env
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build-env
 WORKDIR /app
 
 ENV DOTNET_CLI_TELEMETRY_OPTOUT 1
+ENV PROJECT_DIR="AssetMetadataService/src/DACM.AssetMetadataService"
 
 # copy csproj and restore as distinct layers
-COPY *.csproj ./
+COPY "$PROJECT_DIR/*.csproj" ./
 RUN dotnet restore
 
 # copy everything else and build
-COPY . ./
+COPY "$PROJECT_DIR" ./
 RUN dotnet publish -c Release -o out
 
 # build runtime image
-FROM mcr.microsoft.com/dotnet/core/aspnet:8.0
+FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /app
 COPY --from=build-env /app/out .
+ADD resources/Metadata/AssetMetadata.json /app/resources/Metadata/AssetMetadata.json
+
+ENV ASPNETCORE_URLS http://*:5000
+EXPOSE 5000
 
 ENTRYPOINT ["dotnet", "DACM.AssetMetadataService.dll"]
