--- a/AssetMetadataService/src/DACM.AssetMetadataService/DACM.AssetMetadataService.csproj
+++ b/AssetMetadataService/src/DACM.AssetMetadataService/DACM.AssetMetadataService.csproj
@@ -7,6 +7,7 @@
     <PreserveCompilationContext>true</PreserveCompilationContext>
     <AssemblyName>DACM.AssetMetadataService</AssemblyName>
     <PackageId>DACM.AssetMetadataService</PackageId>
+    <IsTransformWebConfigDisabled>true</IsTransformWebConfigDisabled>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
