--- a/ContentDistributionBackend/src/DACM.ContentDistribution/DACM.ContentDistribution.csproj
+++ b/ContentDistributionBackend/src/DACM.ContentDistribution/DACM.ContentDistribution.csproj
@@ -7,6 +7,7 @@
     <PreserveCompilationContext>true</PreserveCompilationContext>
     <AssemblyName>DACM.ContentDistribution</AssemblyName>
     <PackageId>DACM.ContentDistribution</PackageId>
+    <IsTransformWebConfigDisabled>true</IsTransformWebConfigDisabled>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
