--- a/ContentDistributionBackend/src/DACM.ContentDistribution/DACM.ContentDistribution.csproj
+++ b/ContentDistributionBackend/src/DACM.ContentDistribution/DACM.ContentDistribution.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.4.0"/>
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.4.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" Version="6.4.0"/>
+    <PackageReference Include="StackExchange.Redis" Version="2.7.33" />
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.4" />
