--- a/AssetMetadataService/src/DACM.AssetMetadataService/Dockerfile
+++ b/AssetMetadataService/src/DACM.AssetMetadataService/Dockerfile
@@ -18,7 +18,8 @@ WORKDIR /app
 COPY --from=build-env /app/out .
 ADD resources/Metadata/AssetMetadata.json /app/resources/Metadata/AssetMetadata.json
 
-ENV ASPNETCORE_URLS http://*:5000
+ENV ASPNETCORE_URLS http://+:5000
+ENV DOTNET_URLS=http://+:5000
 EXPOSE 5000
 
 ENTRYPOINT ["dotnet", "DACM.AssetMetadataService.dll"]
