--- a/ContentDistributionBackend/src/DACM.ContentDistribution/Dockerfile
+++ b/ContentDistributionBackend/src/DACM.ContentDistribution/Dockerfile
@@ -17,7 +17,8 @@ FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /app
 COPY --from=build-env /app/out .
 
-ENV ASPNETCORE_URLS http://*:5000
+ENV ASPNETCORE_URLS http://+:5000
+ENV DOTNET_URLS=http://+:5000
 EXPOSE 5000
 
 ENTRYPOINT ["dotnet", "DACM.ContentDistribution.dll"]
